fix spacing

--- a/src/pages/agenda/Agenda.scss
+++ b/src/pages/agenda/Agenda.scss
@@ -153,7 +153,7 @@
 
   &-info {
     display: flex;
-    margin-top: 3%;
+    margin-top: 13%;
     height: 12.4rem;
     width: 161.6rem;
     
