--- a/src/pages/app/AppView.scss
+++ b/src/pages/app/AppView.scss
@@ -4,7 +4,7 @@
 .app {
   height: 197.6rem;
   background: linear-gradient(216.47deg, #5405F3 17.62%, #3EA2FF 78.75%);
-  margin-top: 9%;
+  margin-top: 10%;
   position: relative;
 
   &-phone1, &-phone2 {
