--- a/src/pages/career/Carrer.scss
+++ b/src/pages/career/Carrer.scss
@@ -4,7 +4,7 @@
 .carrer {
   display: flex;
   position: relative;
-  margin-top: 8%;
+  margin-top: 13%;
   // overflow: hidden;
   width: 100%;
 
